--- a/app/_footer.jade
+++ b/app/_footer.jade
@@ -9,7 +9,7 @@ footer.footer
           .foot-nav__head Разделы
           ul
             li
-              a(href="#") Услуги
+              span Услуги
             li
               a(href="#") О нас
             li
@@ -41,7 +41,7 @@ footer.footer
             li
               a(href="#") Карта сайта
       .col.l2.s12
-        .foot-nav
+        .foot-nav.foot-nav--cont
           .foot-nav__head Контакты
           ul
             li
@@ -60,11 +60,11 @@ footer.footer
                 span.icon-02-kievstar
                 | +38 (067) 777 82 19
     .row.foot-bottom
-      .col.l6.s12
+      .col.l6.s12.align-left
         | ©
         span.yearN 2014
         | «Вотерсторе», аквапарки от идеи до воплощения
-      .col.l6.s12
+      .col.l6.s12.align-right
         | Разработка и поддержка сайта - 
         a(href="http://artjoker.ua", target="_blank") Artjoker
 
