--- a/app/_header.jade
+++ b/app/_header.jade
@@ -48,10 +48,10 @@ header.header.clearfix
           .navigation-catalog
             .dropdown-button.navigation-catalog__butt(data-activates='drop-catalog')
               | Каталог
-              .hamburger.hamburger--arrow.js-hamburger.is-active
+              .hamburger.hamburger--arrow.js-hamburger
                 .hamburger-box
                   .hamburger-inner
-            #drop-catalog.dropdown-content.navigation-catalog-body.visible
+            #drop-catalog.dropdown-content.navigation-catalog-body
               .navigation-catalog-inner
                 .navigation-catalog__nav
                   ul
