--- a/app/main.jade
+++ b/app/main.jade
@@ -7,7 +7,7 @@ html
     //if lt IE 9
       script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
       script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
-  body
+  body.index-page
     noscript
       div
         strong Для полной функциональности этого сайта необходимо включить JavaScript. Вот 
@@ -19,7 +19,7 @@ html
         b обновите
         |  его.
     // PRELOADER
-    //- include _preloader
+    include _preloader
     // PRELOADER
     //mobile menu
     include _mobile__nav
