--- a/app/_footer.jade
+++ b/app/_footer.jade
@@ -1,72 +1,73 @@
 footer.footer
-  .container
-    .row.foot-top
-      .col.l2.s12
-        .foot-logo
-          img(src="images/logo-horizontal.svg", alt="")
-      .col.l8.s12
-        .foot-nav
-          .foot-nav__head Разделы
-          ul
-            li
-              span Услуги
-            li
-              a(href="#") О нас
-            li
-              a(href="#") Акции
-            li
-              a(href="#") Статьи
-            li
-              a(href="#") Видео
-            li
-              a(href="#") Контакты
-        .foot-nav
-          .foot-nav__head Каталог
-          ul
-            li
-              a(href="#") Оборудование для бассейнов
-            li
-              a(href="#") Отопление и ГВС
-            li
-              a(href="#") Вентиляция и кондиционирование
-            li
-              a(href="#") Канализация
-        .foot-nav
-          .foot-nav__head Информация
-          ul
-            li
-              a(href="#") Политика конфиденциальности
-            li
-              a(href="#") Условия пользования
-            li
-              a(href="#") Карта сайта
-      .col.l2.s12
-        .foot-nav.foot-nav--cont
-          .foot-nav__head Контакты
-          ul
-            li
-              span Телефон:
-              a(href="tel:+380445020102") +38 (044) 502 01 02
-            li
-              span Факс:
-              a(href="+380445020102") +38 (044) 502 01 03
-            li.divider
-            li
-              a(href='tel:+380667777842')
-                span.icon-03-vodafone
-                | +38 (066) 777 78 42
-            li
-              a(href='tel:+380677778219')
-                span.icon-02-kievstar
-                | +38 (067) 777 82 19
-    .row.foot-bottom
-      .col.l6.s12.align-left
-        | ©
-        span.yearN 2014
-        | «Вотерсторе», аквапарки от идеи до воплощения
-      .col.l6.s12.align-right
-        | Разработка и поддержка сайта - 
-        a(href="http://artjoker.ua", target="_blank") Artjoker
+  .footer-container
+    .container
+      .row.foot-top
+        .col.l2.s12
+          .foot-logo
+            img(src="images/logo-horizontal.svg", alt="")
+        .col.l8.s12
+          .foot-nav
+            .foot-nav__head Разделы
+            ul
+              li
+                span Услуги
+              li
+                a(href="#") О нас
+              li
+                a(href="#") Акции
+              li
+                a(href="#") Статьи
+              li
+                a(href="#") Видео
+              li
+                a(href="#") Контакты
+          .foot-nav
+            .foot-nav__head Каталог
+            ul
+              li
+                a(href="#") Оборудование для бассейнов
+              li
+                a(href="#") Отопление и ГВС
+              li
+                a(href="#") Вентиляция и кондиционирование
+              li
+                a(href="#") Канализация
+          .foot-nav
+            .foot-nav__head Информация
+            ul
+              li
+                a(href="#") Политика конфиденциальности
+              li
+                a(href="#") Условия пользования
+              li
+                a(href="#") Карта сайта
+        .col.l2.s12
+          .foot-nav.foot-nav--cont
+            .foot-nav__head Контакты
+            ul
+              li
+                span Телефон:
+                a(href="tel:+380445020102") +38 (044) 502 01 02
+              li
+                span Факс:
+                a(href="+380445020102") +38 (044) 502 01 03
+              li.divider
+              li
+                a(href='tel:+380667777842')
+                  span.icon-03-vodafone
+                  | +38 (066) 777 78 42
+              li
+                a(href='tel:+380677778219')
+                  span.icon-02-kievstar
+                  | +38 (067) 777 82 19
+      .row.foot-bottom
+        .col.l6.s12.align-left
+          | ©
+          span.yearN 2014
+          | «Вотерсторе», аквапарки от идеи до воплощения
+        .col.l6.s12.align-right
+          | Разработка и поддержка сайта -
+          a(href="http://artjoker.ua", target="_blank") Artjoker
 
 #modal-thank.modal
   .modal-content
