--- a/app/_header.jade
+++ b/app/_header.jade
@@ -51,6 +51,11 @@ header.header.clearfix
               .hamburger.hamburger--arrow.js-hamburger
                 .hamburger-box
                   .hamburger-inner
+            a(href="#catalog").navigation-catalog__butt.navigation-catalog__butt--mobile
+              | Каталог
+              .hamburger.hamburger--arrow.js-hamburger
+                .hamburger-box
+                  .hamburger-inner
             #drop-catalog.dropdown-content.navigation-catalog-body
               .navigation-catalog-inner
                 .navigation-catalog__nav
