--- a/app/_mobile__nav.jade
+++ b/app/_mobile__nav.jade
@@ -97,3 +97,87 @@
       a(href="#") Видео
     li
       a(href="#")  Контакты
+#catalog
+  ul
+    li
+      a(href="#") Оборудование для бассейнов
+      ul
+        li
+          a(href="#") Химия для бассейнов
+        li
+          a(href="#") Обогрев воды в бассейне
+        li
+          a(href="#") Системы фильтрации бассейна
+        li
+          a(href="#") Аксессуары для обслуживания бассейна
+        li
+          a(href="#") Дезинфекция
+        li
+          a(href="#") Трубы/Фитинги
+        li
+          a(href="#") Облицовка бассейнов и прудов
+        li
+          a(href="#") Насосы для бассейна
+        li
+          a(href="#") Закладные
+        li
+          a(href="#") Подводное освещение
+        li
+          a(href="#") Гидромассажные бассейны, Сауны, Парогенераторы, Электрокаменки
+        li
+          a(href="#") Водопады / Противотоки
+        li
+          a(href="#") Лестницы / Поручни
+        li
+          a(href="#") Аксессуары для обслуживания бассейна
+        li
+          a(href="#") Дезинфекция
+        li
+          a(href="#") Трубы/Фитинги
+        li
+          a(href="#") Облицовка бассейнов и прудов
+        li
+          a(href="#") Насосы для бассейна
+        li
+          a(href="#") Закладные
+        li
+          a(href="#") Подводное освещение
+    li
+      a(href="#") Отопление и ГВС
+      ul
+        li
+          a(href="#") Химия для бассейнов
+        li
+          a(href="#") Обогрев воды в бассейне
+        li
+          a(href="#") Системы фильтрации бассейна
+        li
+          a(href="#") Аксессуары для обслуживания бассейна
+        li
+          a(href="#") Дезинфекция
+    li
+      a(href="#") Вентиляция и кондиционирование
+      ul
+        li
+          a(href="#") Химия для бассейнов
+        li
+          a(href="#") Обогрев воды в бассейне
+        li
+          a(href="#") Системы фильтрации бассейна
+        li
+          a(href="#") Аксессуары для обслуживания бассейна
+        li
+          a(href="#") Дезинфекция
+    li
+      a(href="#") Канализация
+      ul
+        li
+          a(href="#") Химия для бассейнов
+        li
+          a(href="#") Обогрев воды в бассейне
+        li
+          a(href="#") Системы фильтрации бассейна
+        li
+          a(href="#") Аксессуары для обслуживания бассейна
+        li
+          a(href="#") Дезинфекция
