--- a/app/category.jade
+++ b/app/category.jade
@@ -19,7 +19,7 @@ html
         b обновите
         |  его.
     // PRELOADER
-    //include _preloader
+    include _preloader
     // PRELOADER
     //mobile menu
     include _mobile__nav
