--- a/app/letter2.jade
+++ b/app/letter2.jade
@@ -49,13 +49,10 @@ html
                       table(cellpadding='0', border='0', cellspacing='0', width='100%', bgcolor='none', style='background:none;margin:0; padding:0;border:none;border-collapse:collapse;')
                         tr
                           td(border="0",style="borde:none",valign="middle")
-                            img(src="images/ico-login.svg")
+                            img(src="images/ico-password.svg")
                           td(border="0",style="borde:none",valign="middle")
                             ul(style="display:inline-block;padding:0;margin:0;list-style:none;")
-                              li(style="margin-bottom:10px;font-size:16px;line-height:20px;color:#393939;font-weight:bold") Ваши данные для доступа:
-                              li(style="margin-bottom:10px;font-size:14px;line-height:18px;color:#393939;")
-                                b login:
-                                | abcdefg
+                              li(style="margin-bottom:10px;font-size:16px;line-height:20px;color:#393939;font-weight:bold") Ваш новый пароль:
                               li(style="font-size:14px;line-height:18px;color:#393939;")
                                 b pass:
                                 | 9379992abc
@@ -65,11 +62,8 @@ html
               td(colspan="3",border='0', height='15', style='border:none;')
             tr
               td(width='50', height='40', valign='middle', border='0', style='border:none;')
-              td(border='0', style='border:none;font-size:15px;line-height:20px;color:#393939; -webkit-text-size-adjust:none;') Для активации новой учётной записи перейдите по ссылке:
-                br
-                a(href="#",style="text-decoration:none;color:#00a8e0") http://waterstore.com.ua/vosstanovlenie-parolya/?hash=2de186b0810a251cc2a03b77b63e6b5f
-                br
-                | Благодарим Вас за регистрацию!
+              td(border='0', style='border:none;font-size:15px;line-height:20px;color:#393939; -webkit-text-size-adjust:none;') Вы можете изменить пароль в
+                a(href="#",style="text-decoration:none;color:#00a8e0;text-decoration:underline;") личном кабинете.
               td(width='50', border='0', style='border:none;')
             tr
               td(colspan="3",border='0', height='30', style='border:none;')
