--- a/app/blog-one.jade
+++ b/app/blog-one.jade
@@ -56,9 +56,8 @@ html
                         span.icon-17-share
                         | Поделиться
                     .share-cont
-                        | asd
-                        //script(src='//yastatic.net/es5-shims/0.0.2/es5-shims.min.js')
-                        //script(src='//yastatic.net/share2/share.js')
+                        script(src='//yastatic.net/es5-shims/0.0.2/es5-shims.min.js')
+                        script(src='//yastatic.net/share2/share.js')
                         .ya-share2(data-services='vkontakte,facebook,odnoklassniki,twitter,viber,telegram')
         //section blog-section
         section.blog-section.blog-section--other-blog
