--- a/app/brend-one.jade
+++ b/app/brend-one.jade
@@ -60,7 +60,7 @@ html
               | Популярные товары бренда
             .row
               mixin product-slide(img,name)
-                .col
+                .col.col-product
                   .product-slider-item
                     a(href="#")
                       .product-slider-item__img
