--- a/app/product.jade
+++ b/app/product.jade
@@ -94,7 +94,7 @@ html
                 .product-price
                   span.new 3 519
                     sub грн
-                .product-order-button
+                .product-order-button.cart-row(data-product-id="55")
                   .quantity-wrap
                     span.minus-icon
                       | &#8722;
