--- a/app/contact.jade
+++ b/app/contact.jade
@@ -42,7 +42,7 @@ html
         //contact
         section.contact-section
           .map-container
-            #map(data-coords="35,40")
+            #map(data-coords="50.410137, 30.632191")
           .container
             .row
               .col.l5.offset-l1.s12
@@ -83,7 +83,6 @@ html
               .col.l5.offset-l1.s12
                 .contact-form
                   .sub-heading Написать нам
-
                   form(action="#").js_validate
                     .input-field.required-field(data-error='Поле не заполнено',required='')
                       span.label-field ФИО*
