--- a/app/product.jade
+++ b/app/product.jade
@@ -336,15 +336,15 @@ html
                           span 75 мм
                   .product-container-info
                     .product-info-head Buderus Logamax Plus GB172i – 20K газовый двухконтурный конденсационный настенный котел
-                    p Котел Buderus Logamax Plus GB172i – 20K это новинка среди конденсационных настенных котлов, мощностью 21,3 кВт. Котел предназначен для отопления и для обеспечения ГВС. Buderus Logamax Plus GB172 i -20K газовый двухконтурный конденсационный настенный котел вобрал в себя самые последние новинки термотехники. Котел оснащен конденсационным теплообменником WB5, системой управления BC25 c возможным совмещением с Logamatic EMS plus и Logamatic 4000.
-                    p Лицевая панель Buderus Logamax Plus GB172 i -20K газового двухконтурного конденсационного настенного котла изготовлена из специального ударостойкого стекла Titanium Glass черного цвета. Стекло такого типа можно с легкостью очистить обычным аэрозольным средством для чистки стеклянных поверхностей.  Котел Buderus Logamax Plus GB172 i -20K может стать прекрасным элементом вашего интерьера.
-                    p Теплообменник конденсационного двухконтурного котла Buderus Logamax Plus GB172 i -20K изготовлен из специального алюминиевого сплава ALU plus, который характеризуется высокой эффективностью и, что самое главное, долговечностью.
+                    p.animated(data-animation="InDown") Котел Buderus Logamax Plus GB172i – 20K это новинка среди конденсационных настенных котлов, мощностью 21,3 кВт. Котел предназначен для отопления и для обеспечения ГВС. Buderus Logamax Plus GB172 i -20K газовый двухконтурный конденсационный настенный котел вобрал в себя самые последние новинки термотехники. Котел оснащен конденсационным теплообменником WB5, системой управления BC25 c возможным совмещением с Logamatic EMS plus и Logamatic 4000.
+                    p.animated(data-animation="InDown") Лицевая панель Buderus Logamax Plus GB172 i -20K газового двухконтурного конденсационного настенного котла изготовлена из специального ударостойкого стекла Titanium Glass черного цвета. Стекло такого типа можно с легкостью очистить обычным аэрозольным средством для чистки стеклянных поверхностей.  Котел Buderus Logamax Plus GB172 i -20K может стать прекрасным элементом вашего интерьера.
+                    p.animated(data-animation="InDown") Теплообменник конденсационного двухконтурного котла Buderus Logamax Plus GB172 i -20K изготовлен из специального алюминиевого сплава ALU plus, который характеризуется высокой эффективностью и, что самое главное, долговечностью.
 
                     .product-info-list.clearfix
-                      img.left(src="assets/images/pr-img.jpg",alt="")
+                      img.left.animated(src="assets/images/pr-img.jpg",alt="",data-animation="InLeft")
                       span Управление
                       p Система управления котлом скрывается в нижней части котла Buderus Logamax Plus GB172 i -20K за откидывающейся панелью, встроена автоматика BC25, обеспечивающая  управление котлом и простоту настроек нужных параметров.  В том числе есть возможность совмещения с автоматическим регулятором Logamatic RC300, который может быть интегрирован непосредственно в сам котел рядом с BC25, что позволит расширить функционал создаваемой системы.
-                      ol
+                      ol.animated(data-animation="InRight")
                         li
                           b Расширительный бак
                           | объемом 12 л может быть установлен даже в больших системах отопления.
@@ -366,9 +366,9 @@ html
                         li
                           b Система управления Logamatic RC300
                           | обеспечивает максимальную функциональность системы.
-                      p Газовым конденсационным котлом Buderus Logamax Plus GB172 i -20K так же можно управлять удаленно через Интернет с помощью инновационного регулятора Buderus Logamatic TC100 и Logamatic web KM200.
+                      p.animated(data-animation="InDown") Газовым конденсационным котлом Buderus Logamax Plus GB172 i -20K так же можно управлять удаленно через Интернет с помощью инновационного регулятора Buderus Logamatic TC100 и Logamatic web KM200.
 
-                    .product-info-list.clearfix
+                    .product-info-list.clearfix.animated(data-animation="InDown")
                       img(src="assets/images/pr-img2.jpg",alt="")
                       span Энергоэффективность
                       p Buderus Logamax Plus GB172 i -20K газовый двухконтурный конденсационный настенный котел был+ отнесен к наивысшему классу «А» согласно Европейской системе оценки энергоэффективности.
