--- a/app/subcategory.jade
+++ b/app/subcategory.jade
@@ -196,23 +196,29 @@ html
           container
             .heading-section.align-center Бренды
             .row.brand-cont
-              .col.l2.m4.s6
-                a(href="#").brand-item
-                  img(src="assets/images/brand1.png", alt="")
-              .col.l2.m4.s6
-                a(href="#").brand-item
-                  img(src="assets/images/brand1.png", alt="")
-              .col.l2.m4.s6
-                a(href="#").brand-item
-                  img(src="assets/images/brand1.png", alt="")
-              .col.l2.m4.s6
-                a(href="#").brand-item
-                  img(src="assets/images/brand1.png", alt="")
-              .col.l2.m4.s6
-                a(href="#").brand-item
-                  img(src="assets/images/brand1.png", alt="")
-              .col.l2.m4.s6
-                a(href="#").brand-item
-                  img(src="assets/images/brand1.png", alt="")
+              .brand-slider
+                .swiper-container
+                  .swiper-wrapper
+                    .swiper-slide
+                      a(href="#").brand-item
+                        img(src="assets/images/brand1.png", alt="")
+                    .swiper-slide
+                      a(href="#").brand-item
+                        img(src="assets/images/brand1.png", alt="")
+                    .swiper-slide
+                      a(href="#").brand-item
+                        img(src="assets/images/brand1.png", alt="")
+                    .swiper-slide
+                      a(href="#").brand-item
+                        img(src="assets/images/brand1.png", alt="")
+                    .swiper-slide
+                      a(href="#").brand-item
+                        img(src="assets/images/brand1.png", alt="")
+                    .swiper-slide
+                      a(href="#").brand-item
+                        img(src="assets/images/brand1.png", alt="")
+                    .swiper-slide
+                      a(href="#").brand-item
+                        img(src="assets/images/brand1.png", alt="")
       //footer
       include _footer
