--- a/app/main.jade
+++ b/app/main.jade
@@ -163,7 +163,7 @@ html
               .product-tab__navs
                 ul.tabs
                   li.tab
-                    a.active(href='#tab1') Оборудование для бассейнов
+                    a(href='#tab1') Оборудование для бассейнов
                   li.tab
                     a(href='#tab2')  Отопление и ГВС
                   li.tab
